fix: align text left

--- a/styles/quests.module.css
+++ b/styles/quests.module.css
@@ -234,6 +234,7 @@
   background-clip: text;
   color: transparent;
   align-items: flex-start;
+  text-align: left;
 }
 
 .participantAvatars {
